
[COLOR="DeepSkyBlue"]4.3.1 (109)[/COLOR]:
[LIST]
[*] Fixed error at AutoCategory_API.lua:187 reported by TaxTalis.
[/LIST]

[COLOR="DeepSkyBlue"]4.3 (108)[/COLOR]:
[LIST]
[*] Removed the doubled category name "CatName (CatName)" from all categories that are using the FCOIS plugin's fcois_ismarked() function in a rule. Requested by Federale and after reproducing it I agree that it is really annoying.
[*] Fixed some errors thrown when deleting rules.
[*] Convert to using logger from LibSFUtils. Now requires LibSFUtils v55.
[/LIST]

[COLOR="DeepSkyBlue"]4.2 (107)[/COLOR]:
[LIST]
[*] Fix error being thrown by the fence launder window. The latest version of ZOS code needed to be replicated and modified to allow the Launder window to work with category headers without erroring out.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.9 (106)[/COLOR]:
[LIST]
[*] Fix error being thrown by delete category. Reported by Teroh.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.8 (105)[/COLOR]:
[LIST]
[*] Fix German name formatting for combined_autoset().
[/LIST]

[COLOR="DeepSkyBlue"]4.1.7 (104)[/COLOR]:
[LIST]
[*] Added back in the HooksGamepad.lua file that somehow disappeared from the last (broken) release package.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.6 (103)[/COLOR]:
[LIST]
[*] Default bag settings will not be loaded in as long as you already have bag settings in your saved variables.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.5 (102)[/COLOR]:
[LIST]
[*] Update version number displayed on addon Settings page.
[*] Releasing this version because in testing, categories remain "removed" from bag settings after logout or reloadui. (I think that the problem was fixed in v4.1.4, but I know it's not in this version.)
[/LIST]

[COLOR="DeepSkyBlue"]4.1.4 (101)[/COLOR]:
[LIST]
[*] After consideration, I've added the variable AutoCategory.Inited to the AutoCategory_API.lua to signify that it is protected from deletion the next time that I'm cleaning out unused code. Addon developers can now rely on it continuing to exist.