@@ -2,8 +2,8 @@
 ## APIVersion: 101044 101045
 ## Author: Shadowfen, crafty35a, RockingDice, Friday_the13_rus
 ## Description: Inventory categorization. Type "/ac" for settings
-## Version: 4.3.1
-## AddOnVersion: 109
+## Version: 4.3.2
+## AddOnVersion: 110
 ## SavedVariables: AutoCategorySavedVars AutoCatRules
 ## DependsOn: LibAddonMenu-2.0>=36 LibCustomMenu LibSFUtils>=55 LibMediaProvider-1.0>=30 LibDebugLogger>=263
 ## OptionalDependsOn: GearChangerByIakoni FCOItemSaver QuickMenu ItemSaver ItemMarker UnknownTracker>=75 MasterMerchant TamrielTradeCentre SetTrack CharacterKnowledge
